<resources>
    <string name="logistics_number_">物流单号:</string>
    <string name="choose_logistics_company">选择物流公司</string>
    <string name="return_to">退货至</string>
    <string name="input_logistics_company">请输入物流公司名称</string>
    <string name="cancleapply">取消申请?</string>
    <string name="scanhistory">浏览记录</string>
    <string name="scanhistory_null">还没有浏览任何商品,赶紧去逛吧</string>
    <string name="clear_scanhistory">确定清空浏览记录？</string>
    <string name="cancel_refund">取消退款</string>
    <string name="refound_completed">退款已完成</string>
    <string name="return_audit">退货审核中</string>
    <string name="cancel_return">取消退货</string>
    <string name="return_of">退货中</string>
    <string name="return_completed">退货已完成</string>
    <string name="confirm_Input_number">确定录入单号</string>
    <string name="confim_number_correct">请确认单号是否正确</string>
    <string name="confirm_correct">录入成功</string>
    <string name="the_awb">运单号</string>
    <string name="return_explain">"退货说明:  "</string>
    <string name="return_reason">"退货原因:  "</string>
    <string name="transaction_amount">"退款金额:  "</string>
    <string name="order_code">"订单编号"</string>
    <string name="order_time">"下单时间"</string>
    <string name="order_time_">"下单时间:  "</string>
    <string name="after_code">"售后单号:  "</string>
    <string name="apply_time">"申请时间:  "</string>
    <string name="tv_aftersale_type">"售后类型:  "</string>
    <string name="login_regeist">登录 | 注册</string>
    <string name="show_all_order">查看全部订单</string>
    <string name="return_refound">退货/退款</string>
    <string name="my_wallet">我的钱包</string>
    <string name="vip_center">会员中心</string>
    <string name="Collection_of_shop">收藏的店铺</string>
    <string name="collect_product">我的收藏</string>
    <string name="my_activity">我的活动</string>
    <string name="no_collect">还没有收藏任何商品,赶紧去逛逛吧</string>
    <string name="return_exchange">售后详情</string>
    <string name="return_apply_od">退货审核通过,请填写物流单号</string>
    <string name="logistics_information">物流信息</string>
    <string name="input_logistics_number">请输入物流单号</string>
    <string name="confirm_submit">确认提交</string>
    <string name="refound_money">退款金额:</string>
    <string name="apply_after_sale_product">申请售后的商品</string>
    <string name="show_info">查看详情</string>
    <string name="personal_info_title">个人资料</string>
    <string name="account_safe">账户安全</string>
    <string name="send_message">消息推送</string>
    <string name="clean_cache">清除缓存</string>
    <string name="open_save_ll">开启省流量模式</string>
    <string name="about_us">关于我们</string>
    <string name="advice">意见反馈</string>
    <string name="exit">退出当前账户</string>
    <string name="can_modify_psd">可修改密码</string>
    <string name="delete_cache_photos">确定要删除缓存图片</string>
    <string name="text2">身份验证</string>
    <string name="date_of_birth">出生日期</string>
    <string name="text1">4-20个字符,可由中英文、数字、“_”、“-”组成</string>
    <string name="get_validate_code">获取验证码</string>
    <string name="textPhone">更换手机号</string>
    <string name="text4">原手机号丢失?</string>
    <string name="modify_phone2">修改手机</string>
    <string name="modify_phone">修改绑定手机号码</string>
    <string name="original_psd">原  密  码</string>
    <string name="original_psd2">原密码</string>
    <string name="new_psd2">新密码</string>
    <string name="confirm_psd">确认密码</string>
    <string name="input_original_psd">请输入原密码</string>
    <string name="advice2">*建议您定期更改密码以保护账户安全</string>
    <string name="advice3">*若您的验证手机已丢失或停用,请立即修改更换</string>
    <string name="verifycode_null">验证码不能为空</string>
    <string name="ui_null">暂无UI</string>
    <string name="phone_not_show">****</string>
    <string name="phone_verify">手机验证</string>
    <string name="psd_not_null">原密码不能为空</string>
    <string name="psd_format_error">密码格式不符合要求</string>
    <string name="psd_notconfirm">两次输入的密码不一样</string>
    <string name="psd_repeat">新密码和旧密码相同</string>
    <string name="change_nick">修改昵称</string>
    <string name="nick_null">昵称不能为空!</string>
    <string name="select_true_time">请选择正确的日期!</string>
    <string name="sex_secrecy">保密</string>
    <string name="confirm_clear_cache">确认清除缓存</string>
    <string name="clear_success">清除成功</string>
    <string name="confirm_loginout">确定要退出登录吗?</string>
    <string name="about_version">XX 版本5.0.1</string>
    <string name="about_downLoad">扫描二维码下载</string>
    <string name="about_share_toFriend">分享给好友</string>
    <string name="about_hotLine">客服热线</string>
    <string name="about_evaluate">给我评分</string>
    <string name="about_phoneNum">400-123-123</string>
    <string name="about_workTime">客服工作时间 : 每日8:00-24:00</string>
    <string name="system_inform">系统通知</string>
    <string name="helpcenter">帮助中心</string>
    <string name="messagecenter">消息中心</string>
    <string name="no_serach">非常抱歉，没有找到符合条件的信息</string>
    <string name="please_enter_logistics_company">请输入物流公司</string>
    <string name="audit_not_through">审核不通过</string>
    <string name="terrace_platform">平台处理中</string>
    <string name="inspection_not_through">验货不通过</string>
    <string name="After_complete">售后完成</string>
    <string name="refund_water_">退款流水:\t</string>
    <string name="return_reason_">退货原因:\t</string>
    <string name="Return_instructions">退货说明:\t</string>
    <string name="The_goods_have_been_sent_again">货物已重新发出</string>

    <string name="title_point_card">查询伊点卡</string>
    <string name="text_card_num">卡号</string>
    <string name="text_card_num_input">请输入卡号</string>
    <string name="text_card_password">密码</string>
    <string name="text_card_password_input">请输入密码</string>
    <string name="text_card_search">查询</string>
</resources>
