<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    >

    <RelativeLayout
        android:id="@+id/liner_title1"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#FFFFFF"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/icon_back_normal" />

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:text="@string/title_point_card"
            android:textColor="@color/sub_title_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_like_right"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/main_title_color"
            android:textSize="15sp"
            android:visibility="gone" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_color" />

    <ImageView
        android:layout_width="153dp"
        android:layout_height="89dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:src="@drawable/ydcard_query_pic" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="18dp"
        android:background="@color/line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:text="@string/text_card_num"
            android:textColor="@color/rectangle_bead"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_cardnum"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_marginLeft="30dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/text_card_num_input"
            android:inputType="number"
            android:textColor="@color/main_title_color"
            android:textColorHint="@color/rectangle_bead"
            android:textSize="@dimen/text_size_15sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:text="@string/text_card_password"
            android:textColor="@color/rectangle_bead"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_marginLeft="30dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/text_card_password_input"
            android:textColor="@color/main_title_color"
            android:inputType="numberPassword"
            android:textColorHint="@color/rectangle_bead"
            android:textSize="@dimen/text_size_15sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_color" />

    <!--下一步-->
    <TextView
        android:id="@+id/tv_sure"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:layout_below="@id/v_divide_line4"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:background="@drawable/selector_login"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/text_card_search"
        android:textColor="@color/white"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textSize="18sp" />

</LinearLayout>