<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical">

    <include layout="@layout/myhome_pager_head" />

    <!--修改密码-->
    <RelativeLayout
        android:id="@+id/rl_modify_psd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modify_psd"
                android:textColor="@color/main_title_color"
                android:textSize="@dimen/textsize_18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/advice2"
                android:textColor="@color/main_title_color"
                android:textSize="@dimen/textsize_12sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="80dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:scaleType="center"
            android:src="@drawable/icon_next" />
    </RelativeLayout>

    <!--分割线-->
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/divider_color" />  <!--修改手机号-->
    <RelativeLayout
        android:id="@+id/rl_modify_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modify_phone"
                android:textColor="@color/main_title_color"
                android:textSize="@dimen/textsize_18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/advice3"
                android:textColor="@color/main_title_color"
                android:textSize="@dimen/textsize_12sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_next2"
            android:layout_width="50dp"
            android:layout_height="80dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:scaleType="center"
            android:src="@drawable/icon_next" />

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/iv_next2"
            android:text="12345678912"
            android:textColor="@color/theme_color"
            android:textSize="@dimen/textsize_12sp"

            />
    </RelativeLayout>
    ut>

</LinearLayout>
